Section 1 an navbar is done

--- a/src/index.html
+++ b/src/index.html
@@ -1,21 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./output.css">
 </head>
+
 <body>
     <header>
-        <section class="hidden xl:flex xl:max-w-[1200px] xl:m-auto xl:p-[10px] justify-between items-center text-[18px]">
+        <section
+            class="hidden xl:flex xl:max-w-[1200px] xl:m-auto xl:p-[10px] justify-between items-center text-[18px]">
             <p class="text-[gray]">Сеть клиник Томской области</p>
             <p class="text-[gray]">Версия для слабовидящих</p>
             <div class="flex gap-[20px] items-center">
                 <p>+ 7 (978) 00-00-000</p>
-                <button class="bg-[#2CA25E] text-[white] py-[6px] px-[20px] rounded-[50px] text-[16px]">Записаться на прием</button>
+                <button class="bg-[#2CA25E] text-[white] py-[6px] px-[20px] rounded-[50px] text-[16px]">Записаться на
+                    прием</button>
             </div>
         </section>
+
+
+        <section class="flex justify-between items-center p-[10px] xl:max-w-[1200px] xl:m-auto">
+            <img src="./image 1 (2).png" alt="">
+            <div class="hidden xl:flex gap-[35px] text-[17px]">
+                <p>Врачи</p>
+                <p>Услуги</p>
+                <p>Диагностика</p>
+                <p>Анализы</p>
+                <p>Акции</p>
+                <p>Пациентам</p>
+                <p>О клинике</p>
+                <p>Отзывы</p>
+                <p>Контакты</p>
+            </div>
+            <img class="xl:hidden" src="./burger (2).png" alt="">
+        </section>
     </header>
+
+
+
+    <section class="bg-[#30A561] my-[30px]  py-[40px] p-[10px]">
+
+        <div class="xl:max-w-[1200px] xl:m-auto flex justify-between items-center xl:gap-[80px]">
+            <div>
+                <h1 class="text-[40px] font-bold text-[white] xl:text-[70px]">Lorem ipsum dolor sit amet, consectetur</h1>
+                <p class="text-[13px] py-[15px] text-[white] xl:text-[20px]">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra amet dolor sed mi tincidunt pharetra
+                    montes. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra amet dolor sed mi tincidunt
+                    pharetra montes.</p>
+                    <button class="text-[#2A9C5B] bg-[white] text-[13px] font-bold py-[6px] px-[35px] rounded-[50px] xl:text-[16px]">Подробнее</button>
+            </div>
+            <img class="hidden xl:block" src="./TDV_M63_010 1.png" alt="">
+        </div>
+    </section>
 </body>
+
 </html>
