section is done

--- a/src/index.html
+++ b/src/index.html
@@ -54,6 +54,9 @@
             <img class="hidden xl:block" src="./TDV_M63_010 1.png" alt="">
         </div>
     </section>
+    <section>
+        <h1>Hello</h1>
+    </section>
 </body>
 
 </html>
